fixed overflow in Match History

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    @apply min-h-screen flex flex-col;
+    @apply min-h-screen flex flex-col overflow-hidden;
 }
 
 header {
@@ -43,7 +43,7 @@ header nav .active-link {
 }
 
 main {
-    @apply flex-1 content-stretch flex bg-blue-200 bg-geometric-pattern;
+    @apply flex-1 max-h-screen overflow-hidden content-stretch flex bg-blue-200 bg-geometric-pattern;
 }
 
 .app-wrapper-center {
@@ -64,6 +64,10 @@ ol {
 
 ul ol, ol ul {
     @apply ml-6;
+}
+
+ul li:last-of-type, ol li:last-of-type {
+    @apply mb-1;
 }
 
 ul ul {
